--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -15,6 +15,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
+      - name: Debug Secret Values
+        run: |
+          echo "VERCEL_ORG_ID length: ${#VERCEL_ORG_ID}"
+          echo "VERCEL_PROJECT_ID length: ${#VERCEL_PROJECT_ID}"
+          echo "VERCEL_TOKEN exists: ${{ secrets.VERCEL_TOKEN != '' }}"
+          if [ -z "$VERCEL_ORG_ID" ]; then echo "VERCEL_ORG_ID is empty"; fi
+          if [ -z "$VERCEL_PROJECT_ID" ]; then echo "VERCEL_PROJECT_ID is empty"; fi
+          if [ -z "${{ secrets.VERCEL_TOKEN }}" ]; then echo "VERCEL_TOKEN is empty"; fi
+      
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
@@ -24,7 +33,9 @@ jobs:
         run: npm install --global vercel@latest
         
       - name: Setup Project
-        run: vercel link --token=${{ secrets.VERCEL_TOKEN }} --project=${{ secrets.VERCEL_PROJECT_ID }}
+        run: |
+          echo "Running vercel link with Project ID: ${VERCEL_PROJECT_ID}"
+          vercel link --token=${{ secrets.VERCEL_TOKEN }} --project=${{ secrets.VERCEL_PROJECT_ID }}
         
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
