added yes flog to the vercel link

--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Setup Project
         run: |
           echo "Running vercel link with Project ID: ${VERCEL_PROJECT_ID}"
-          vercel link --token=${{ secrets.VERCEL_TOKEN }} --project=${{ secrets.VERCEL_PROJECT_ID }}
+          vercel link --yes --token=${{ secrets.VERCEL_TOKEN }} --project=${{ secrets.VERCEL_PROJECT_ID }} --scope=${{ secrets.VERCEL_ORG_ID }}
         
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
