--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -21,7 +21,7 @@ jobs:
           node-version: 18
           
       - name: Install Dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
         
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v20
