--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "typewriter-effect": "^2.21.0"
+    "react-typed": "^2.0.12"
   },
   "devDependencies": {
     "@types/node": "^20",
